<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BaseFiles.BaseActivity">
    <com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/base_title_layout">
    </com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout>
    <Button
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_title"
        android:onClick="layoutAvtivityAction"
        />
    <Button
        android:id="@+id/list_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_view_activity_title"
        android:onClick="layoutAvtivityAction"
        />
    <Button
        android:id="@+id/fragment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_activity_title"
        android:onClick="layoutAvtivityAction"
    />
    <Button
        android:id="@+id/news_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_activity_title"
        android:onClick="layoutAvtivityAction"
        />
    <Button
        android:id="@+id/reciver_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reciver_activity_title"
        android:onClick="layoutAvtivityAction"
        />
    <Button
        android:id="@+id/file_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_activity_title"
        android:onClick="layoutAvtivityAction"
        />
    <Button
        android:id="@+id/content_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="内容读取器"
        android:onClick="layoutAvtivityAction"
        />

</LinearLayout>
