<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LayoutFiles.LayoutActivity">
    <com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/base_title_layout">
    </com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout>
    <Button
        android:id="@+id/linear_layout"
        android:onClick="trasportActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_activity_title"/>
    <Button
        android:id="@+id/frame_layout"
        android:onClick="trasportActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout_activity_title"/>
    <Button
        android:id="@+id/relative_layout"
        android:onClick="trasportActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout_activity_title"/>
    <Button
        android:id="@+id/table_layout"
        android:onClick="trasportActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_layout_activity_title"/>
</LinearLayout>
