<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reciver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jesophwen.josephwenandroidtext.ReciverFiles.ReciverActivity">
    <com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout
        android:id="@+id/reciver_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout>
    <Button
        android:id="@+id/network_reciver_button"
        android:text="@string/network_reciver_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reciverButtonAction"/>
    <Button
        android:id="@+id/custom_reciver_button"
        android:text="@string/custom_reciver_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reciverButtonAction"/>
    <Button
        android:id="@+id/local_reciver_button"
        android:text="@string/local_reciver_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reciverButtonAction"/>

</LinearLayout>
