<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LayoutFiles.TableLayoutActivity">

    <com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/base_title_layout">
    </com.example.jesophwen.josephwenandroidtext.BaseFiles.TitleLayout>


    <TableLayout
        android:layout_below="@id/base_title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableRow>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
        </TableRow>
        <TableRow>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
        </TableRow>
        <TableRow>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_gravity="top" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:text="Account"/>
            <EditText
                android:hint="@string/account"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_width="0dp"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:text="Password"/>
            <EditText
                android:hint="@string/password"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_width="0dp"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="Login"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
